--- a/Frame_Two Images.html
+++ b/Frame_Two Images.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Farcaster Frame Example</title>
+    <meta name="og:image" content="https://fc-dev-call.replit.app/image"/>
     <meta name="fc:frame" content="vNext">
-    <meta name="fc:frame:image" content="1.91:1">
+    <meta name="fc:frame:image" content="https://fc-dev-call.replit.app/image"/>
+    <meta name="fc:frame:post_url" content="https://ujval-frames-46mr-pju4ycptz-ujval37s-projects.vercel.app/"/>
 </head>
 <body>
     <div id="frameContainer" style="width: 600px; height: 400px;"> <!-- Set frame size here -->
