--- a/InteractiveFrame.html
+++ b/InteractiveFrame.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="frameContainer" style="width: 600px; height: 400px;">
-        <!-- Set frame size here -->
+        <!-- Set frame size here... -->
         <div>
             <button onclick="loadImage('https://f47nke5yr6lcihwab5nusivmqv3zwexrs5e66kd5f52vesgwwrqq.arweave.net/Lz7VE7iPliQewA9bSSKshXebEvGXSe8ofS91UkjWtGE')">Evening Image</button>
             <button onclick="loadImage('https://uh3jufpsrowj3do43wphdpoln5wxtgaulaooqromqfg2izldrx4a.arweave.net/ofaaFfKLrJ2N3N2ecb3Lb215mBRYHOhFzIFNpGVjjfg')">Morning Image</button>
