--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <div id="frameContainer" style="width: 600px; height: 400px;">
         <div>
-            <button onclick="window.location.href = 'https://www.farcaster.xyz/'">Farcaster</button>
-            <button onclick="window.location.href = 'https://www.warpcast.com/'">Warpcast</button>
-            <button onclick="window.location.href = 'https://docs.farcaster.xyz/'">Farcaster Docs</button>
-            <button onclick="window.location.href = 'https://www.thehubble.xyz/'">Farcaster Hubble</button>
+            <button onclick="window.location.href = 'https://www.instagram.com/ujvalpasupuleti/'">Instagram</button>
+            <button onclick="window.location.href = 'https://foundation.app/@UjvalPasupuleti'">Foundation</button>
+            <button onclick="window.location.href = 'https://opensea.io/UjvalPasupuleti'">OpenSea Docs</button>
+
         </div>
     </div>
 </body>
