--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Farcaster Frame Example</title>
     <meta name="fc:frame" content="vNext">
-    <meta name="fc:frame:image" content="https://foundation.app/mint/eth/0x3B3ee1931Dc30C1957379FAc9aba94D1C48a5405/61427">
-    
+    <meta name="fc:frame:image" content="hujval37/Ujval-Frames/Lynx_HeadOn_Crop1.jpg">
 </head>
 <body>
     <div id="frameContainer" style="width: 600px; height: 400px;">
