--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Farcaster Frame Example</title>
     <meta name="fc:frame" content="vNext">
-    <meta name="fc:frame:image" content="https://github.com/ujval37/Ujval-Frames/blob/main/frame-fc.png">
+    <meta name="fc:frame:image" content="https://raw.githubusercontent.com/ujval37/Ujval-Frames/main/frame-fc.png">
 </head>
 <body>
     <div id="frameContainer" style="width: 600px; height: 400px;">
