--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Farcaster Frame Example</title>
     <meta name="fc:frame" content="vNext">
-    <meta name="fc:frame:image" content="https://raw.githubusercontent.com/ujval37/Ujval-Frames/main/Lynx_HeadOn_Crop1.jpg">
+
+    <meta property="fc:frame:button:1:target" content="https://raw.githubusercontent.com/ujval37/Ujval-Frames/main/Lynx_HeadOn_Crop1.jpg">
+    <meta property="fc:frame:image:aspect_ratio" content="1:1">
 </head>
 <body>
     <div id="frameContainer" style="width: 600px; height: 400px;">
