--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Farcaster Frame Example</title>
     <meta name="fc:frame" content="vNext">
-
-    <meta property="fc:frame:button:1:target" content="https://raw.githubusercontent.com/ujval37/Ujval-Frames/main/Lynx_HeadOn_Crop1.jpg">
+    <meta property="fc:frame:image" content="https://raw.githubusercontent.com/ujval37/Ujval-Frames/main/Lynx_HeadOn_Crop1.jpg">
     <meta property="fc:frame:image:aspect_ratio" content="1:1">
 </head>
 <body>
@@ -15,7 +14,6 @@
             <button onclick="window.location.href = 'https://www.instagram.com/ujvalpasupuleti/'">Instagram</button>
             <button onclick="window.location.href = 'https://foundation.app/@UjvalPasupuleti'">Foundation</button>
             <button onclick="window.location.href = 'https://opensea.io/UjvalPasupuleti'">OpenSea Docs</button>
-
         </div>
     </div>
 </body>
